--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Logs
 logs
 *.log
+*.tlog
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -30,7 +31,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+# build/Release
 
 # Dependency directories
 node_modules/
@@ -59,3 +60,5 @@ typings/
 
 # next.js build output
 .next
+
+neodop-nadop-firebase-adminsdk-utczv-77988483c9.json
